--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -186,7 +186,7 @@
           <mat-list-item class="secondary-list">
             <a
               mat-list-item
-              href="https://chym-ndt.com/certificados/consultar.php"
+              (click)="goToCetificates()"
               target="_blank">Consulta de certificados</a>
             <mat-divider></mat-divider>
           </mat-list-item>
