--- a/src/app/home/components/certificates/cert-validation/cert-validation.component.html
+++ b/src/app/home/components/certificates/cert-validation/cert-validation.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="search">
-        <h1>Validación de certicados expedidos</h1>
+        <h1>Validación de certificados expedidos</h1>
         <p>Puede buscar por código de certificado o por identificación.</p>
         <form
             [formGroup]="validationForm"
