--- a/src/app/home/components/courses/courses.component.scss
+++ b/src/app/home/components/courses/courses.component.scss
@@ -76,7 +76,7 @@
 .single-course .course-image img {
     width: 100%;
     display: block;
-    height: auto;
+    max-height: 144px;
     border-radius: 5px;
 }
 
