--- a/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.html
+++ b/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.html
@@ -16,7 +16,7 @@
                 <p>No. Certificado</p>
                 <p>{{ item.certificado ? item.certificado : '-' }}</p>
                 <p>Curso:</p>
-                <p>{{ item.curso }}</p>
+                <p>{{ item.curso ? item.curso : item.carrera }}</p>
                 <p>Profesor:</p>
                 <p>{{ item.profesor }}</p>
                 <p>Fecha de expedición:</p>
