--- a/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.html
+++ b/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.html
@@ -35,6 +35,14 @@
                 matInput
                 tabIndex=1/>
             </mat-form-field>
+            <mat-form-field>
+                <mat-label>Sigla para certificados</mat-label>
+                <input
+                formControlName="sigla"
+                type="text"
+                matInput
+                tabIndex=2/>
+            </mat-form-field>
         </div>
         <div class="buttons">
             <button
