bug de certificado arreglado

--- a/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.scss
+++ b/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.scss
@@ -65,6 +65,7 @@ main {
 
             img {
                 width: 80%;
+                max-height: 150px;
             }
 
             .download-btn {
