--- a/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
+++ b/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
@@ -10,7 +10,14 @@
         mat-raised-button
         routerLink="../crear-certificado"
         style="background: var(--main-color2); color: white;">
-            Crear nuevo
+            Crear nuevo certificado
+    </button>
+    <button
+        mat-raised-button
+        color="primary"
+        routerLink="../disenos-certificados"
+        style="margin-left: 1rem;">
+            Ver plantillas
     </button>
     <table
         mat-table
