--- a/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.html
+++ b/src/app/dashboard/components/certificates/std-certicates/std-certicates.component.html
@@ -25,5 +25,6 @@
                 <p>{{ item.fechaExpiracion ? item.fechaExpiracion : 'n/a' }}</p>
             </div>
         </div>
+        <div id="element" style="display: none; max-width: 1024px;"></div>
     </section>
 </main>
