--- a/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
+++ b/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
@@ -1,5 +1,5 @@
 <section class="main-container">
-    <h2>nuestras carresas</h2>
+    <h2>nuestras carreras</h2>
     <div class="courses-container">
         <div class="single-course" *ngFor="let item of carreras">
             <div class="course-image">
